--- a/frontend/src/Style/Trasectionpage.css
+++ b/frontend/src/Style/Trasectionpage.css
@@ -5,7 +5,7 @@
      width: 95%;
      margin: auto;
      padding-top: 100px;
-     border:1px solid red
+     /* border:1px solid red */
 }
 .listhead{
      width: 100%;
