--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -15,6 +15,9 @@
 .nav-section{
      color:white;
      font-size: 20px;
+     border:1px solid white;
+     padding:2px 10px;
+     border-radius: 10px;
 }
 .logout-btn{
      background-color: white;
