--- a/frontend/src/Style/Login.css
+++ b/frontend/src/Style/Login.css
@@ -8,10 +8,17 @@
    
 }
 .loginform-box{
-     width: 30%;
+     width: 400px;
      height:400px;
      padding:20px;
      margin: auto;
      background-color: white;
 }
+
+@media only screen and (max-width: 1200px){
+     .loginform-box{
+          width: 90%;
+          margin:auto;
+     }
+ }
 
