--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -26,3 +26,58 @@
      border-radius: 10px;
      font-size: 20px;
 }
+
+@media only screen and (max-width: 700px){
+    
+     .nav-section{
+          font-size: 18px;
+     }
+     .logout-btn{
+    
+          font-size: 18px;
+     }
+ }
+
+ @media only screen and (max-width: 623px){
+    
+     .nav-section{
+          font-size: 15px;
+     }
+     .logout-btn{
+         font-size: 15px;
+     }
+ }
+
+ @media only screen and (max-width: 425px){
+     .navbar{
+          width: 100%;
+          margin: auto;
+          height:auto;
+          padding:5px 5px;
+          border-radius: 5px;
+          /* flex-direction: column; */
+     }
+    .nav-first-box{
+     width: 100%;
+     flex-direction: column;
+    }
+     .nav-section{
+          width: 90%;
+          margin: auto;
+          font-size: 12px;
+     }
+     .nav-section:last-child{
+          width: 90%;
+          margin: auto;
+          font-size: 10px;
+          border: none;
+     }
+     /* .logout-btn{
+          width: 90%;
+          margin: auto;
+          padding:5px 10px;
+          border-radius: 10px;
+          font-size: 15px;
+          margin-top: 20px;
+     } */
+ }
