--- a/frontend/src/Style/Accountpage.css
+++ b/frontend/src/Style/Accountpage.css
@@ -13,3 +13,13 @@
 .detail-btn:hover{
      transform: scale(1.1);
 }
+
+
+@media only screen and (max-width: 950px){
+     .detail-btn{
+       
+        font-size: 12px;
+          width: fit-content;
+          padding:5px 10px;
+     }
+}
